Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101984

Windows bluetooth socket not marked as unbuffered

    XMLWordPrintable

Details

    • Windows
    • 2d5fbc4ff5 (qt/qtconnectivity/dev) de3f4118ca (qt/qtconnectivity/6.3) 5424996142 (qt/qtconnectivity/6.2) 5424996142 (qt/tqtc-qtconnectivity/6.2) de3f4118ca (qt/tqtc-qtconnectivity/6.3) 2d5fbc4ff5 (qt/tqtc-qtconnectivity/dev)

    Description

      It would seem that the QBluetoothSocket on Windows is always unbuffered, but not marked as such.

      Attachments

        For Gerrit Dashboard: QTBUG-101984
        # Subject Branch Project Status CR V

        Activity

          People

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes