Mark QBluetoothSockets as unbuffered on Windows

Currently the windows bluetooth sockets don't support buffering.
This commit marks the sockets as "Unbuffered".

Fixes: QTBUG-101984
Change-Id: Id41cc4896cc5c6c1382b0a09faab6756021cfb3f
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 2d5fbc4ff5fa30868085cbe8397ae8683cc6fbad)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>